modify getMatchResult with score and assist entity